# tractolearn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dmri.txt  setup.cfg  setup.py  setup_helpers.py  tox.ini
.github/: CONTRIBUTING.rst  labels.yml  title_to_labels.yml
.github/scripts/: issue_title_regex_labeler.py  pr_title_regex_labeler.py
.github/workflows/: build_doc.yml  check_format.yml  documentation.yml  issue_body_labeler.yml  issue_title_labeler.yml  pr_path_labeler.yml  pr_title_labeler.yml  test_package.yml  wip.yml
configs/: config.yaml  find_threshold_config.yaml  train_config.yaml
doc/: conf.py  index.rst
doc/bibtex/: Dumais22_-_arXiv_-_FIESTA.bib  Dumais23_-_Neuroimage_-_FIESTA.bib  Legarreta22_-_MICCAI-CDMRI_-_CINTA.bib  Legarreta22_-_arXiv_-_GESTA.bib  Legarreta23_-_MIA_-_GESTA.bib
doc/devel/: coding_style_guideline.rst
docs/bibtex/: Legarreta21_-_MIA_-_FINTA.bib  Legarreta22_-_MICCAI-CDMRI_-_CINTA.bib
docs/source/: conf.py  index.rst
docs/source/devel/: coding_style_guideline.rst
requirements/: requirements.txt  requirements_dmri_git.txt
scripts/: ae_bundle_streamlines.py  ae_find_thresholds.py  ae_generate_streamline.py  ae_generate_streamlines.py  ae_train.py  fetch_data.py
scripts/tests/: test_fetch_data.py
tools/gitsetup/: setup-hooks.sh
tools/hooks/: prepare-commit-msg
tractolearn/: Logger.py  __init__.py  info.py  logger.py
tractolearn.egg-info/: PKG-INFO  SOURCES.txt
tractolearn/anatomy/: __init__.py  bundles_additional_labels.py
tractolearn/config/: Experiment.py  experiment.py
tractolearn/filtering/: __init__.py  latent_space_distance_informer.py  latent_space_featuring.py  streamline_space_filtering.py
tractolearn/generative/: filter_generated_points.py  generate_points.py
tractolearn/learning/: DataManager.py  Datasets.py  TrainerManager.py  data_manager.py  dataset.py  trainer_manager.py
tractolearn/models/: autoencoding_utils.py  forward.py  model_performance_history.py  model_pool.py  track_ae_cnn1d_incr_feat_strided_conv_fc_upsamp_reflect_pad_pytorch.py
tractolearn/tractoio/: dataset_fetch.py  file_extensions.py  utils.py
tractolearn/tractoio/tests/: test_dataset_fetch.py  test_utils.py
tractolearn/tractomath/: utils.py
tractolearn/transformation/: peaks_utils.py  streamline_transformation.py  volume_utils.py
tractolearn/utils/: Timer.py  layer_utils.py  logging_setup.py  losses.py  processing_utils.py  utils.py
tractolearn/visualization/: plot_utils.py  scene_utils.py  tractogram_visualization.py  utils.py
