[build-system]
requires = [
    "setuptools >= 66",
    "wheel",
    "setuptools_scm >= 6.4",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # common dependencies
    "comet-ml == 3.0.0",
    "h5py == 2.10.0",
    "matplotlib >= 2.2.0",
    "joblib == 1.1.0",
    "numpy >= 1.20.0",
    "pandas",
    "pathos",
    "pydot",
    "pygame",
    "pyyaml",
    "seaborn == 0.11.0",
    "scikit-learn == 0.22.0",
    "scipy == 1.4.0",
    "torch == 1.8.1",
    "torchsummary == 1.5.1",
    "tqdm",
    "umap-learn",
    # DWI dependencies
    "dipy == 1.3.0",
    "fury == 0.7.1",
    "nibabel == 3.0.0",
    # Git dependencies
    "scilpy @ git+https://github.com/scilus/scilpy@1.2.2",
]
description = "Tractography learning"
dynamic = ["version"]
keywords = ["DL, dMRI, neuroimaging, tractography"]
maintainers = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
name = "tractolearn"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "hypothesis >= 6.8.0",
    "pytest == 5.3",
    "pytest-cov",
    "pytest-pep8",
    "pytest-xdist",
    "pytest_console_scripts",
]
dev = [
    "black == 22.12",
    "flake8 == 3.9.2",
    "flake8-docstrings == 1.6.0",
    "isort == 5.8.0",
    "pre-commit >= 2.9.0",
]
doc = [
 "sphinx",
 "sphinx-rtd-theme",
 "tomli",
]

[project.scripts]
ae_bundle_streamlines = "scripts:ae_bundle_streamlines.main"
ae_find_thresholds = "scripts:ae_find_thresholds.main"
ae_generate_streamlines = "scripts:ae_generate_streamlines.main"
ae_train = "scripts:ae_train.main"
fetch_data = "scripts:fetch_data.main"

[options.extras_require]
all = [
    "%(test)s",
]

[project.urls]
homepage = "https://github.com/scil-vital/tractolearn"
documentation = "https://tractolearn.readthedocs.io/en/latest/"
repository = "https://github.com/scil-vital/tractolearn"

[tool.black]
line-length = 79
target-version = ["py38"]
exclude ='''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | data            # also separately exclude project-specific files
                    # and folders in the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["tractolearn"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools_scm]
write_to = "tractolearn/_version.py"